--- a/templates/index.html
+++ b/templates/index.html
@@ -186,29 +186,29 @@
         <!-- page specific plugin scripts -->
 
         <!-- ace scripts -->
-        <!-- <script src="../assets/js/src/elements.scroller.js"></script> -->
-        <!-- <script src="../assets/js/src/elements.colorpicker.js"></script> -->
-        <!-- <script src="../assets/js/src/elements.fileinput.js"></script> -->
-        <!-- <script src="../assets/js/src/elements.typeahead.js"></script> -->
-        <!-- <script src="../assets/js/src/elements.wysiwyg.js"></script> -->
-        <!-- <script src="../assets/js/src/elements.spinner.js"></script> -->
-        <!-- <script src="../assets/js/src/elements.treeview.js"></script> -->
-        <!-- <script src="../assets/js/src/elements.wizard.js"></script> -->
-        <!-- <script src="../assets/js/src/elements.aside.js"></script> -->
-        <!-- <script src="../assets/js/src/ace.js"></script> -->
-        <!-- <script src="../assets/js/src/ace.basics.js"></script> -->
-        <!-- <script src="../assets/js/src/ace.scrolltop.js"></script> -->
-        <!-- <script src="../assets/js/src/ace.ajax-content.js"></script> -->
-        <!-- <script src="../assets/js/src/ace.touch-drag.js"></script> -->
-        <!-- <script src="../assets/js/src/ace.sidebar.js"></script> -->
-        <!-- <script src="../assets/js/src/ace.sidebar-scroll-1.js"></script> -->
-        <!-- <script src="../assets/js/src/ace.submenu-hover.js"></script> -->
-        <!-- <script src="../assets/js/src/ace.widget-box.js"></script> -->
-        <!-- <script src="../assets/js/src/ace.settings.js"></script> -->
-        <!-- <script src="../assets/js/src/ace.settings-rtl.js"></script> -->
-        <!-- <script src="../assets/js/src/ace.settings-skin.js"></script> -->
-        <!-- <script src="../assets/js/src/ace.widget-on-reload.js"></script> -->
-        <!-- <script src="../assets/js/src/ace.searchbox-autocomplete.js"></script> -->
+        <script src="{{ url_for('static', filename='ace/js/src/elements.scroller.js') }}"></script>
+        <script src="{{ url_for('static', filename='ace/js/src/elements.colorpicker.js') }}"></script>
+        <script src="{{ url_for('static', filename='ace/js/src/elements.fileinput.js') }}"></script>
+        <script src="{{ url_for('static', filename='ace/js/src/elements.typeahead.js') }}"></script>
+        <script src="{{ url_for('static', filename='ace/js/src/elements.wysiwyg.js') }}"></script>
+        <script src="{{ url_for('static', filename='ace/js/src/elements.spinner.js') }}"></script>
+        <script src="{{ url_for('static', filename='ace/js/src/elements.treeview.js') }}"></script>
+        <script src="{{ url_for('static', filename='ace/js/src/elements.wizard.js') }}"></script>
+        <script src="{{ url_for('static', filename='ace/js/src/elements.aside.js') }}"></script>
+        <script src="{{ url_for('static', filename='ace/js/src/ace.js') }}"></script>
+        <script src="{{ url_for('static', filename='ace/js/src/ace.basics.js') }}"></script>
+        <script src="{{ url_for('static', filename='ace/js/src/ace.scrolltop.js') }}"></script>
+        <script src="{{ url_for('static', filename='ace/js/src/ace.ajax-content.js') }}"></script>
+        <script src="{{ url_for('static', filename='ace/js/src/ace.touch-drag.js') }}"></script>
+        <script src="{{ url_for('static', filename='ace/js/src/ace.sidebar.js') }}"></script>
+        <script src="{{ url_for('static', filename='ace/js/src/ace.sidebar-scroll-1.js') }}"></script>
+        <script src="{{ url_for('static', filename='ace/js/src/ace.submenu-hover.js') }}"></script>
+        <script src="{{ url_for('static', filename='ace/js/src/ace.widget-box.js') }}"></script>
+        <script src="{{ url_for('static', filename='ace/js/src/ace.settings.js') }}"></script>
+        <script src="{{ url_for('static', filename='ace/js/src/ace.settings-rtl.js') }}"></script>
+        <script src="{{ url_for('static', filename='ace/js/src/ace.settings-skin.js') }}"></script>
+        <script src="{{ url_for('static', filename='ace/js/src/ace.widget-on-reload.js') }}"></script>
+        <script src="{{ url_for('static', filename='ace/js/src/ace.searchbox-autocomplete.js') }}"></script>
 
         <!-- inline scripts related to this page -->
 
