Pages for erlang B and RPN calculators

--- a/templates/_layout.html
+++ b/templates/_layout.html
@@ -126,7 +126,7 @@
 
                         <ul class="submenu">
                             <li class="">
-                                <a href="elements.html">
+                                <a href="/calculators/rpn">
                                     <i class="menu-icon fa fa-caret-right"></i>
                                     RPN - Reverse Polish Notation
                                 </a>
@@ -135,7 +135,7 @@
                             </li>
 
                             <li class="">
-                                <a href="buttons.html">
+                                <a href="/calculators/erlangB">
                                     <i class="menu-icon fa fa-caret-right"></i>
                                     Erlang-B calculator
                                 </a>
@@ -160,7 +160,8 @@
                     <div class="row">
                         <div class="col-xs-12">
                             <!-- PAGE CONTENT BEGINS -->
-<p>Hello world</p>
+                            {% block content %}
+                            {% endblock %}
                             <!-- PAGE CONTENT ENDS -->
                         </div><!-- /.col -->
                     </div><!-- /.row -->
